--- a/templates/index.html
+++ b/templates/index.html
@@ -1,43 +1,134 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Geophysics</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary mb-3">
-        <div class="container">
-            <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link fs-2 active" aria-current="page" href="{{ url_for('index') }}">Home</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="container">
-        <div class="d-flex flex-column align-items-center justify-content-center">
-            <h1>Geophysics</h1>
-            
-            <p>მომხმარებლებს შეუძლიათ დაწერონ ქვიზები სხვადასხვა საგნებში და მიიღონ ქულები,
-                <br>ქულების დაგროვების შემდეგ კი მოხვდებიან საიტის მთავარ ცხრილში.
-                <br>ქვიზის დაწერა შესაძლებელია სხვადასხვა საგნებში:
-            </p>
-                <ul>
-                    <li>მათემატიკა</li>
-                    <li>ისტორია</li>
-                    <li>გეოგრაფია</li>
-                </ul>
-        </div>
+{% extends "base.html" %}
+
+{% block title %}
+    Quick Quiz - Main
+{% endblock %}
+
+{% block body %}
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&callback=initMap" async defer></script>
+    <script>
+        var stations = [];
+
+function initMap() {
+    var latlng = new google.maps.LatLng(42.264, 43.322);
+    var myOptions = {
+        zoom: 7,
+        center: latlng,
+        panControl: false,
+        streetViewControl: false,
+        mapTypeControl: true,
+        mapTypeControlOptions: {style: google.maps.MapTypeControlStyle.DROPDOWN_MENU},
+        mapTypeId: google.maps.MapTypeId.HYBRID,
+        zoomControl: true,
+        zoomControlOptions: {style: google.maps.ZoomControlStyle.SMALL}
+    };
+    var map = new google.maps.Map(document.getElementById("map"), myOptions);
+    fetchAndSetMarkers(map);
+}
+
+function fetchAndSetMarkers(map) {
+    fetch('/api/data')
+        .then(response => response.json())
+        .then(data => {
+            stations = data;
+            console.log(stations);
+            setMarkers(map);
+        })
+        .catch(error => console.error('Error fetching data:', error));
+}
+
+        function setMarkers(map) {
+            for (var i = 0; i < stations.length; i++) {
+                var station = stations[i];
+                var marker = new google.maps.Marker({
+                    position: {lat: parseFloat(station.tStLatitude), lng: parseFloat(station.tStLongitude)},
+                    map: map,
+                    title: station.tStCode
+                });
+                attachInfoWindow(marker, station);
+            }
+        }
+
+        function attachInfoWindow(marker, station) {
+            var infoWindow = new google.maps.InfoWindow({
+                content: `
+                    <div>
+                        <strong>${station.code}</strong><br>
+                        Location: ${station.location}<br>
+                        Latitude: ${station.latitude}<br>
+                        Longitude: ${station.longitude}<br>
+                        Elevation: ${station.elevation}<br>
+                        Open Date: ${station.openDate}<br>
+                        Close Date: ${station.closeDate}<br>
+                        Type: ${station.type}<br>
+                        Show: ${station.show}<br>
+                        Last Editor: ${station.lastEditor}<br>
+                        Last Edit Time: ${station.lastEditTime}
+                    </div>`
+            });
+            marker.addListener('click', function() {
+                infoWindow.open(map, marker);
+            });
+        }
+
+        // Initialize the map when the page loads
+        document.addEventListener("DOMContentLoaded", function() {
+            initMap();
+        });
+    </script>
+    <div id="map" 
+        style="width:700px;height:400px;border: 1px solid #CCC;margin-top:0px;" 
+        class="d-flex justify-content-center align-items-center pt-5">
     </div>
-</body>
-</html>
+
+    <a class="btn btn-primary mb-2" href="#">Add Station</a>
+    <table class="table align-middle table-bordered border-muted mb-0 bg-white table-striped">
+        <thead class="table-primary">
+            <tr>
+                <th>tStStatuse</th>
+                <th>tStCode</th>
+                <th>tStNetworkCode</th>
+                <th>tStLocation</th>
+                <th>tStLatitude</th>
+                <th>tStLongitude</th>
+                <th>tStElevation</th>
+                <th>tStOpenDate</th>
+                <th>tStCloseDate</th>
+                <th>tStType</th>
+                <th>tStShow</th>
+                <th>tStLastEditor</th>
+                <th>tStLastEditTime</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for data in data_list %}
+            <tr>
+                <td>{{ data.tStStatuse }}</td>
+                <td>{{ data.tStCode }}</td>
+                <td>{{ data.tStNetworkCode }}</td>
+                <td>{{ data.tStLocation }}</td>
+                <td>{{ data.tStLatitude }}</td>
+                <td>{{ data.tStLongitude }}</td>
+                <td>{{ data.tStElevation }}</td>
+                <td>{{ data.tStOpenDate }}</td>
+                <td>{{ data.tStCloseDate }}</td>
+                <td>{{ data.tStType }}</td>
+                <td>{{ data.tStShow }}</td>
+                <td>{{ data.tStLastEditor }}</td>
+                <td>{{ data.tStLastEditTime }}</td>
+                <td>
+                    <a class="btn btn-info" href="#">Edit</a>
+                </td>
+                <td>
+                    <form action="#" method="POST" style="display:inline;">
+                        <button type="submit" class="btn btn-danger btn-block" onclick="return confirm('Are you sure you want to delete this question?');">Delete</button>
+                    </form>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    
+{% endblock %}
