--- a/templates/index.html
+++ b/templates/index.html
@@ -9,33 +9,33 @@
     <script>
         var stations = [];
 
-function initMap() {
-    var latlng = new google.maps.LatLng(42.264, 43.322);
-    var myOptions = {
-        zoom: 7,
-        center: latlng,
-        panControl: false,
-        streetViewControl: false,
-        mapTypeControl: true,
-        mapTypeControlOptions: {style: google.maps.MapTypeControlStyle.DROPDOWN_MENU},
-        mapTypeId: google.maps.MapTypeId.HYBRID,
-        zoomControl: true,
-        zoomControlOptions: {style: google.maps.ZoomControlStyle.SMALL}
-    };
-    var map = new google.maps.Map(document.getElementById("map"), myOptions);
-    fetchAndSetMarkers(map);
-}
+        function initMap() {
+            var latlng = new google.maps.LatLng(42.264, 43.322);
+            var myOptions = {
+                zoom: 7,
+                center: latlng,
+                panControl: false,
+                streetViewControl: false,
+                mapTypeControl: true,
+                mapTypeControlOptions: {style: google.maps.MapTypeControlStyle.DROPDOWN_MENU},
+                mapTypeId: google.maps.MapTypeId.HYBRID,
+                zoomControl: true,
+                zoomControlOptions: {style: google.maps.ZoomControlStyle.SMALL}
+            };
+            var map = new google.maps.Map(document.getElementById("map"), myOptions);
+            fetchAndSetMarkers(map);
+        }
 
-function fetchAndSetMarkers(map) {
-    fetch('/api/data')
-        .then(response => response.json())
-        .then(data => {
-            stations = data;
-            console.log(stations);
-            setMarkers(map);
-        })
-        .catch(error => console.error('Error fetching data:', error));
-}
+        function fetchAndSetMarkers(map) {
+            fetch('/api/data')
+                .then(response => response.json())
+                .then(data => {
+                    stations = data;
+                    // console.log(stations);
+                    setMarkers(map);
+                })
+                .catch(error => console.error('Error fetching data:', error));
+        }
 
         function setMarkers(map) {
             for (var i = 0; i < stations.length; i++) {
@@ -76,59 +76,62 @@ function fetchAndSetMarkers(map) {
             initMap();
         });
     </script>
-    <div id="map" 
-        style="width:700px;height:400px;border: 1px solid #CCC;margin-top:0px;" 
-        class="d-flex justify-content-center align-items-center pt-5">
+    <div class="w-100 h-50">
+        <div id="map" 
+            style="width: 100%; height:100%;border:  1px solid #CCC;margin-top:0px;">
+        </div>
     </div>
 
+
     <a class="btn btn-primary mb-2" href="#">Add Station</a>
-    <table class="table align-middle table-bordered border-muted mb-0 bg-white table-striped">
-        <thead class="table-primary">
-            <tr>
-                <th>tStStatuse</th>
-                <th>tStCode</th>
-                <th>tStNetworkCode</th>
-                <th>tStLocation</th>
-                <th>tStLatitude</th>
-                <th>tStLongitude</th>
-                <th>tStElevation</th>
-                <th>tStOpenDate</th>
-                <th>tStCloseDate</th>
-                <th>tStType</th>
-                <th>tStShow</th>
-                <th>tStLastEditor</th>
-                <th>tStLastEditTime</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for data in data_list %}
-            <tr>
-                <td>{{ data.tStStatuse }}</td>
-                <td>{{ data.tStCode }}</td>
-                <td>{{ data.tStNetworkCode }}</td>
-                <td>{{ data.tStLocation }}</td>
-                <td>{{ data.tStLatitude }}</td>
-                <td>{{ data.tStLongitude }}</td>
-                <td>{{ data.tStElevation }}</td>
-                <td>{{ data.tStOpenDate }}</td>
-                <td>{{ data.tStCloseDate }}</td>
-                <td>{{ data.tStType }}</td>
-                <td>{{ data.tStShow }}</td>
-                <td>{{ data.tStLastEditor }}</td>
-                <td>{{ data.tStLastEditTime }}</td>
-                <td>
-                    <a class="btn btn-info" href="#">Edit</a>
-                </td>
-                <td>
-                    <form action="#" method="POST" style="display:inline;">
-                        <button type="submit" class="btn btn-danger btn-block" onclick="return confirm('Are you sure you want to delete this question?');">Delete</button>
-                    </form>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    
+    <div class="table-responsive-xxl">
+        <table class="table align-middle table-bordered border-muted mb-0 bg-white table-striped">
+            <thead class="table-primary">
+                <tr>
+                    <th>tStStatuse</th>
+                    <th>tStCode</th>
+                    <th>tStNetworkCode</th>
+                    <th>tStLocation</th>
+                    <th>tStLatitude</th>
+                    <th>tStLongitude</th>
+                    <th>tStElevation</th>
+                    <th>tStOpenDate</th>
+                    <th>tStCloseDate</th>
+                    <th>tStType</th>
+                    <th>tStShow</th>
+                    <th>tStLastEditor</th>
+                    <th>tStLastEditTime</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for data in data_list %}
+                <tr>
+                    <td>{{ data.tStStatuse }}</td>
+                    <td>{{ data.tStCode }}</td>
+                    <td>{{ data.tStNetworkCode }}</td>
+                    <td>{{ data.tStLocation }}</td>
+                    <td>{{ data.tStLatitude }}</td>
+                    <td>{{ data.tStLongitude }}</td>
+                    <td>{{ data.tStElevation }}</td>
+                    <td>{{ data.tStOpenDate }}</td>
+                    <td>{{ data.tStCloseDate }}</td>
+                    <td>{{ data.tStType }}</td>
+                    <td>{{ data.tStShow }}</td>
+                    <td>{{ data.tStLastEditor }}</td>
+                    <td>{{ data.tStLastEditTime }}</td>
+                    <td>
+                        <a class="btn btn-info" href="#">Edit</a>
+                    </td>
+                    <td>
+                        <form action="#" method="POST" style="display:inline;">
+                            <button type="submit" class="btn btn-danger btn-block" onclick="return confirm('Are you sure you want to delete this question?');">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
