--- a/templates/index.html
+++ b/templates/index.html
@@ -8,30 +8,7 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&callback=initMap" async></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/map.js') }}" defer></script>
     <div class="filterMapDiv">
-        <div class="filterDiv">
-            <div class="card">
-                <p>dwafawwfawfwafaw</p>
-                <p>dwafawwfawfwafaw</p>
-            </div>
-            <div class="card">
-                <table class="table table-borderless">
-                    <tbody>
-                        <tr class="text-center">
-                            <td class="text-end"><img src="../static/img/green.png" width="17" height="17"></td>
-                            <td class="text-start">მოქმედი სეისმური სადგური</td>
-                        </tr>
-                        <tr class="text-center">
-                            <td class="text-end"><img src="../static/img/yellow.png" width="17" height="17"></td>
-                            <td class="text-start">დროებითი სეისმური სადგური</td>
-                        </tr>
-                        <tr class="text-center">
-                            <td class="text-end"><img src="../static/img/red.png" width="17" height="17"></td>
-                            <td class="text-start">შეჩერებული სეისმური სადგური</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        {% include "filter.html" %}
 
         <div class="card w-100 h-100">
             <div id="map" 
