--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,9 @@
             </div>
         </div>
     </div>
-
-    <a class="btn btn-primary mt-1 mb-1" href="#">Add Station</a>
+    <ul class="list-group list-group-light">
+        <li class="list-group-item px-3 border-0"><a class="btn btn-primary" href="#">Add Station</a></li>
+    </ul>
     
     <div class="table-responsive-xxl text-center" style="font-size: x-small;">
         <table class="table align-middle table-bordered border-muted mb-0 bg-white table-striped">
