--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
 <body>
     {% include "navbar.html" %}
-    <section style="background-color: #eee; height: 93vh; overflow-y: auto; font-size: small;">
+    <section style="background-color: #eee; overflow-y: auto; font-size: small;">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
@@ -25,7 +25,7 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-        <div class="container h-100">
+        <div class="container">
             {% block body %}
             {% endblock %}
         </div>
