--- a/templates/filter.html
+++ b/templates/filter.html
@@ -1,7 +1,56 @@
 <div class="filterDiv">
     <div class="card">
-        <p>dwafawwfawfwafaw</p>
-        <p>dwafawwfawfwafaw</p>
+        <form method="POST">
+            <table class="table table-borderless mt-2">
+                <tbody>
+                    <tr class="text-center">
+                        <td>სადგურის ტიპი:</td>
+                        <td class="text-start">
+                            <label class="form-check-label me-3" for="flexCheckDefault">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                                <img src="../static/img/green.png" width="17" height="17">
+                            </label>
+                            <label class="form-check-label me-3" for="flexCheckDefault">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                                <img src="../static/img/yellow.png" width="17" height="17">
+                            </label>
+                            <label class="form-check-label" for="flexCheckDefault">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                                <img src="../static/img/red.png" width="17" height="17">
+                            </label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-center pt-3">სადგურის კოდი:</td>
+                        <td>
+                            <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-center pt-3">ქსელის კოდი:</td>
+                        <td>
+                            <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-center pt-3">თარიღი (დან):</td>
+                        <td>
+                            <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-center pt-3">თარიღი (მდე):</td>
+                        <td>
+                            <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
+                        </td>
+                    </tr>
+                    <tr class="align-items-center">
+                        <a class="btn btn-sm btn-primary" href="#">Add Station</a>
+                        <a class="btn btn-sm btn-primary" href="#">Add Station</a>
+                    </tr>
+                </tbody>
+            </table>
+        </form>
     </div>
     <div class="card">
         <table class="table table-borderless">
