--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,14 @@
     <div class="filterMapDiv">
         {% include "filter.html" %}
 
-        <div class="card w-100 h-100">
+        <div class="card" style="width: 100%; height: 20rem">
             <div id="map" 
                 style="width: 100%; height:100%; border: 1px solid #CCC; border-radius: 5px; margin-top:0px;">
             </div>
         </div>
     </div>
     <ul class="list-group list-group-light">
-        <li class="list-group-item px-3 border-0"><a class="btn btn-primary" href="#">Add Station</a></li>
+        <li class="list-group-item px-3 border-0"><a class="btn btn-sm btn-primary" href="#">Add Station</a></li>
     </ul>
     
     <div class="table-responsive-xxl text-center" style="font-size: x-small;">
