--- a/templates/filter.html
+++ b/templates/filter.html
@@ -44,9 +44,9 @@
                             <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
                         </td>
                     </tr>
-                    <tr class="align-items-center">
-                        <a class="btn btn-sm btn-primary" href="#">Add Station</a>
-                        <a class="btn btn-sm btn-primary" href="#">Add Station</a>
+                    <tr>
+                        <td class="text-end"><a class="btn btn-sm btn-primary" href="#">გაფილტვრა</a></td>
+                        <td><a class="btn btn-sm btn-primary" href="#">გასუფთავება</a></td>
                     </tr>
                 </tbody>
             </table>
