Add Database and models

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -13,7 +13,7 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
                     <li class="nav-item">
-                        {{ create_navlink('index', 'Home') }}
+                        {{ create_navlink('stations.index', 'Home') }}
                     </li>
                 </ul>
             </div>
