--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,7 @@
 {% block body %}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&callback=initMap" async></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/map.js') }}" defer></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/stationTable.js') }}" defer></script>
     <div class="filterMapDiv">
         {% include "filter.html" %}
 
@@ -41,32 +42,8 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
-                {% for data in data_list %}
-                <tr>
-                    <td>{{ data.tStStatuse }}</td>
-                    <td>{{ data.tStCode }}</td>
-                    <td>{{ data.tStNetworkCode }}</td>
-                    <td>{{ data.tStLocation }}</td>
-                    <td>{{ data.tStLatitude }}</td>
-                    <td>{{ data.tStLongitude }}</td>
-                    <td>{{ data.tStElevation }}</td>
-                    <td>{{ data.tStOpenDate }}</td>
-                    <td>{{ data.tStCloseDate }}</td>
-                    <td>{{ data.tStType }}</td>
-                    <td>{{ data.tStShow }}</td>
-                    <td>{{ data.tStLastEditor }}</td>
-                    <td>{{ data.tStLastEditTime }}</td>
-                    <td>
-                        <a class="btn btn-info" href="#">Edit</a>
-                    </td>
-                    <td>
-                        <form action="#" method="POST" style="display:inline;">
-                            <button type="submit" class="btn btn-danger btn-block" onclick="return confirm('Are you sure you want to delete this question?');">Delete</button>
-                        </form>
-                    </td>
-                </tr>
-                {% endfor %}
+            <tbody id="stationTableBody">
+                <!-- Data will be populated dynamically here -->
             </tbody>
         </table>
     </div>
