--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -26,13 +26,13 @@
         <div class="form-group">
             <label for="projectStatus">პროექტის სტატუსი:</label>
             <select class="form-control" id="projectStatus" name="project_status">
-                <option value="Ongoing">მიმდინარე</option>
-                <option value="Completed">დასრულებული</option>
+                <option value="0">მიმდინარე</option>
+                <option value="1">დასრულებული</option>
             </select>
         </div>
         <div class="d-flex justify-content-center align-items-center mt-3">
             <button type="submit" class="btn btn-primary me-2">პროექტის დამატება</button>
-            <a class="btn btn-info" href="/view_projects">ყველა პროექტი</a>
+            <a class="btn btn-info" href="/projects">ყველა პროექტი</a>
         </div>
     </form>
     
