--- a/src/templates/projects/projects.html
+++ b/src/templates/projects/projects.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <ul class="list-group list-group-light">
-        <li class="list-group-item px-3 border-0"><a class="btn btn-sm btn-primary" href="/create_project">სადგურის დამატება</a></li>
+        <li class="list-group-item px-3 border-0"><a class="btn btn-sm btn-primary" href="/create_project">პროექტის დამატება</a></li>
     </ul>
     
     <div class="table-responsive-xxl text-center" style="font-size: x-small;">
