--- a/src/templates/stations/stations.html
+++ b/src/templates/stations/stations.html
@@ -25,19 +25,19 @@
         <table class="table align-middle table-bordered border-muted mb-0 bg-white table-striped">
             <thead class="table-primary">
                 <tr>
-                    <th>პროექტის სახელი</th>
-                    <th>ხელშეკრულების ნომერი</th>
-                    <th>დაწყების დღე</th>
-                    <th>დასრულების დღე</th>
-                    <th>დამკვეთი</th>
+                    <th>სტატუსი	კოდი</th>
+                    <th>კოდი</th>
+                    <th>ქსელის კოდი</th>
                     <th>ადგილმდებარეობა</th>
                     <th>განედი</th>
                     <th>გრძედი</th>
-                    <th>გეოლოგიური კვლევა</th>
-                    <th>გეოფიზიკური კვლევა</th>
-                    <th>სეისმური საშიშროების შეფასება</th>
-                    <th>გეოდეზიური კვლევა</th>
-                    <th>სხვა ტიპის კვლევა</th>
+                    <th>სიმაღლე(მ)</th>
+                    <th>გახსნის დღე</th>
+                    <th>დახურვის დღე</th>
+                    <th>ტიპი</th>
+                    <th>გამოჩენა</th>
+                    <th>ბოლო რედაქტორი</th>
+                    <th>ბოლო რედაქტირება(UTC)</th>
                     <th></th>
                     <th></th>
                 </tr>
