--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,6 +1,6 @@
 {% from "macros.html" import create_navlink %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary" style="height: 7vh;">
+<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary" style="height: 3rem;">
     <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
