change database models

--- a/src/templates/filter.html
+++ b/src/templates/filter.html
@@ -6,16 +6,16 @@
                     <tr class="text-center">
                         <td>სადგურის ტიპი:</td>
                         <td class="text-start">
-                            <label class="form-check-label me-3" for="flexCheckDefault">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                            <label class="form-check-label me-3" for="CheckGreen">
+                                <input class="form-check-input" type="checkbox" value="" id="CheckGreen" />
                                 <img src="../static/img/green.png" width="17" height="17">
                             </label>
-                            <label class="form-check-label me-3" for="flexCheckDefault">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                            <label class="form-check-label me-3" for="CheckYellow">
+                                <input class="form-check-input" type="checkbox" value="" id="CheckYellow" />
                                 <img src="../static/img/yellow.png" width="17" height="17">
                             </label>
-                            <label class="form-check-label" for="flexCheckDefault">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+                            <label class="form-check-label" for="CheckRed">
+                                <input class="form-check-input" type="checkbox" value="" id="CheckRed" />
                                 <img src="../static/img/red.png" width="17" height="17">
                             </label>
                         </td>
