--- a/src/templates/filter.html
+++ b/src/templates/filter.html
@@ -1,5 +1,5 @@
 <div class="filterDiv">
-    <div class="card">
+    <div class="card mt-2">
         <form method="POST">
             <table class="table table-borderless mt-2">
                 <tbody>
