--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -12,40 +12,40 @@
     <form class="row" id="addProjectForm" action="/api/projects" method="POST">
         <div class="form-group">
             <label for="projectName">პროექტის სახელი:</label>
-            <input type="text" class="form-control" id="projectName" name="projects_name" required>
+            <input type="text" class="form-control mt-2" id="projectName" name="projects_name" required>
         </div>
         <div class="form-group">
             <label for="contractNumber">ხელშეკრულების ნომერი:</label>
-            <input type="number" class="form-control" id="contractNumber" name="contract_number" required>
+            <input type="number" class="form-control mt-2" id="contractNumber" name="contract_number" required>
         </div>
         <div class="col">
             <div class="form-group">
                 <label for="startTime">დაწყების დღე:</label>
-                <input type="date" class="form-control" id="startTime" name="start_time" required>
+                <input type="date" class="form-control mt-2" id="startTime" name="start_time" required>
             </div>
         </div>
         <div class="col">
             <div class="form-group">
                 <label for="endTime">დასრულების დღე:</label>
-                <input type="date" class="form-control" id="endTime" name="end_time" required>
+                <input type="date" class="form-control mt-2" id="endTime" name="end_time" required>
             </div>
         </div>
 
         <div class="form-group">
             <label for="contractor">დამკვეთი:</label>
-            <input type="text" class="form-control" id="contractor" name="contractor" required>
+            <input type="text" class="form-control mt-2" id="contractor" name="contractor" required>
         </div>
         <div class="form-group">
             <label for="projLocation">პროექტის მდებარეობა:</label>
-            <input type="text" class="form-control" id="projLocation" name="proj_location" required>
+            <input type="text" class="form-control mt-2" id="projLocation" name="proj_location" required>
         </div>
-        <div class="form-group">
+        <div class="col form-group">
             <label for="projLatitude">განედი:</label>
-            <input type="number" step="any" class="form-control" id="projLatitude" name="proj_latitude" required>
+            <input type="number" step="any" class="form-control mt-2" id="projLatitude" name="proj_latitude" required>
         </div>
-        <div class="form-group mb-3">
+        <div class="col form-group mb-3">
             <label for="projLongitude">გრძედი:</label>
-            <input type="number" step="any" class="form-control" id="projLongitude" name="proj_longitude" required>
+            <input type="number" step="any" class="form-control mt-2" id="projLongitude" name="proj_longitude" required>
         </div>
         <div>
             <p>მონიშნეთ თუ არი კვლევა პროექტზე:</p>
