--- a/src/templates/projects/projects.html
+++ b/src/templates/projects/projects.html
@@ -7,7 +7,7 @@
 {% block body %}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&callback=initMap" async></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/map.js') }}" defer></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/stationTable.js') }}" defer></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/projects.js') }}" defer></script>
     <div class="filterMapDiv">
         {% include "filter.html" %}
 
@@ -42,7 +42,7 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody id="stationTableBody">
+            <tbody id="projectTableBody">
                 <!-- Data will be populated dynamically here -->
             </tbody>
         </table>
