--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -59,9 +59,9 @@
         </div>
         <div class="col form-group">
             <div class="form-check">
-                <input type="hidden" name="geophysycal_study" value="false">
-                <input class="form-check-input" type="checkbox" id="geophysycalStudy" name="geophysycal_study" value="true">
-                <label class="form-check-label" for="geophysycalStudy">გეოფიზიკური კვლევა</label>
+                <input type="hidden" name="geophysical_study" value="false">
+                <input class="form-check-input" type="checkbox" id="geophysicalStudy" name="geophysical_study" value="true">
+                <label class="form-check-label" for="geophysicalStudy">გეოფიზიკური კვლევა</label>
             </div>
         </div>
         <div class="col form-group">
