add view_project and edit filter

--- a/src/templates/filter.html
+++ b/src/templates/filter.html
@@ -4,30 +4,38 @@
             <table class="table table-borderless mt-2">
                 <tbody>
                     <tr class="text-center">
-                        <td>სადგურის ტიპი:</td>
+                        <td>პროექტის ტიპი:</td>
                         <td class="text-start">
-                            <label class="form-check-label me-3" for="CheckGreen">
-                                <input class="form-check-input" type="checkbox" value="" id="CheckGreen" />
-                                <img src="../static/img/green.png" width="17" height="17">
+                            <label class="form-check-label me-2" for="CheckWarning">
+                                <input class="form-check-input" type="checkbox" value="" id="CheckWarning" />
+                                <img src="../static/img/warning.png" width="15" height="15">
                             </label>
-                            <label class="form-check-label me-3" for="CheckYellow">
-                                <input class="form-check-input" type="checkbox" value="" id="CheckYellow" />
-                                <img src="../static/img/yellow.png" width="17" height="17">
+                            <label class="form-check-label me-2" for="CheckSuccess">
+                                <input class="form-check-input" type="checkbox" value="" id="CheckSuccess" />
+                                <img src="../static/img/success.png" width="15" height="15">
                             </label>
-                            <label class="form-check-label" for="CheckRed">
-                                <input class="form-check-input" type="checkbox" value="" id="CheckRed" />
-                                <img src="../static/img/red.png" width="17" height="17">
+                            <label class="form-check-label me-2" for="CheckPrimary">
+                                <input class="form-check-input" type="checkbox" value="" id="CheckPrimary" />
+                                <img src="../static/img/primary.png" width="15" height="15">
+                            </label>
+                            <label class="form-check-label me-2" for="CheckSecondary">
+                                <input class="form-check-input" type="checkbox" value="" id="CheckSecondary" />
+                                <img src="../static/img/secondary.png" width="15" height="15">
+                            </label>
+                            <label class="form-check-label me-2" for="CheckInfo">
+                                <input class="form-check-input" type="checkbox" value="" id="CheckInfo" />
+                                <img src="../static/img/info.png" width="15" height="15">
                             </label>
                         </td>
                     </tr>
                     <tr>
-                        <td class="text-center pt-3">სადგურის კოდი:</td>
+                        <td class="text-center pt-3">პროექტის სახელი:</td>
                         <td>
                             <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
                         </td>
                     </tr>
                     <tr>
-                        <td class="text-center pt-3">ქსელის კოდი:</td>
+                        <td class="text-center pt-3">ხელშეკრულების ნომერი:</td>
                         <td>
                             <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
                         </td>
@@ -56,16 +64,24 @@
         <table class="table table-borderless">
             <tbody>
                 <tr class="text-center">
-                    <td class="text-end"><img src="../static/img/green.png" width="17" height="17"></td>
-                    <td class="text-start">მოქმედი სეისმური სადგური</td>
+                    <td class="text-end"><img src="../static/img/warning.png" width="17" height="17"></td>
+                    <td class="text-start">გაკეთდა გეოლოგიური კვლევა</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="text-end"><img src="../static/img/yellow.png" width="17" height="17"></td>
-                    <td class="text-start">დროებითი სეისმური სადგური</td>
+                    <td class="text-end"><img src="../static/img/success.png" width="17" height="17"></td>
+                    <td class="text-start">გაკეთდა გეოფიზიკური კვლევა</td>
                 </tr>
                 <tr class="text-center">
-                    <td class="text-end"><img src="../static/img/red.png" width="17" height="17"></td>
-                    <td class="text-start">შეჩერებული სეისმური სადგური</td>
+                    <td class="text-end"><img src="../static/img/primary.png" width="17" height="17"></td>
+                    <td class="text-start">გაკეთდა სეისმური საშიშროების შეფასება</td>
+                </tr>
+                <tr class="text-center">
+                    <td class="text-end"><img src="../static/img/secondary.png" width="17" height="17"></td>
+                    <td class="text-start">გაკეთდა გეოდეზიური კვლევა</td>
+                </tr>
+                <tr class="text-center">
+                    <td class="text-end"><img src="../static/img/info.png" width="17" height="17"></td>
+                    <td class="text-start">გაკეთდა სხვა ტიპის კვლევა</td>
                 </tr>
             </tbody>
         </table>
