--- a/src/templates/filter.html
+++ b/src/templates/filter.html
@@ -4,25 +4,25 @@
             <table class="table table-borderless mt-2">
                 <tbody>
                     <tr class="text-center">
-                        <td>პროექტის ტიპი:</td>
+                        <td>კვლევის ტიპი:</td>
                         <td class="text-start">
-                            <label class="form-check-label me-2" for="CheckWarning">
+                            <label class="form-check-label me-1" for="CheckWarning">
                                 <input class="form-check-input" type="checkbox" value="" id="CheckWarning" />
                                 <img src="../static/img/warning.png" width="15" height="15">
                             </label>
-                            <label class="form-check-label me-2" for="CheckSuccess">
+                            <label class="form-check-label me-1" for="CheckSuccess">
                                 <input class="form-check-input" type="checkbox" value="" id="CheckSuccess" />
                                 <img src="../static/img/success.png" width="15" height="15">
                             </label>
-                            <label class="form-check-label me-2" for="CheckPrimary">
+                            <label class="form-check-label me-1" for="CheckPrimary">
                                 <input class="form-check-input" type="checkbox" value="" id="CheckPrimary" />
                                 <img src="../static/img/primary.png" width="15" height="15">
                             </label>
-                            <label class="form-check-label me-2" for="CheckSecondary">
+                            <label class="form-check-label me-1" for="CheckSecondary">
                                 <input class="form-check-input" type="checkbox" value="" id="CheckSecondary" />
                                 <img src="../static/img/secondary.png" width="15" height="15">
                             </label>
-                            <label class="form-check-label me-2" for="CheckInfo">
+                            <label class="form-check-label me-1" for="CheckInfo">
                                 <input class="form-check-input" type="checkbox" value="" id="CheckInfo" />
                                 <img src="../static/img/info.png" width="15" height="15">
                             </label>
