--- a/src/templates/projects/projects.html
+++ b/src/templates/projects/projects.html
@@ -11,7 +11,7 @@
     <div class="filterMapDiv">
         {% include "filter.html" %}
 
-        <div class="card mt-2" style="width: 100%; height: 33rem">
+        <div id="mapDiv" class="card mt-2">
             <div id="map" 
                 style="width: 100%; height:100%; border: 1px solid #CCC; border-radius: 5px; margin-top:0px;">
             </div>
@@ -21,7 +21,7 @@
         <li class="list-group-item px-3 border-0"><a class="btn btn-sm btn-primary" href="/create_project">პროექტის დამატება</a></li>
     </ul>
     
-    <div class="table-responsive-xxl text-center" style="font-size: x-small;">
+    <div class="table-responsive-xxl text-center mt-1 mb-3" style="font-size: x-small;">
         <table class="table align-middle table-bordered border-muted mb-0 bg-white table-striped">
             <thead class="table-primary">
                 <tr>
