--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/geological.js') }}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical.js') }}" defer></script>
     <div id="projectId" data-project-id="{{ project_id }}"></div>
-    <div style="display: flex; flex-direction: row; height: 50%;">
-        <div class="card mt-2 w-50">
+    <div class="projectImageDiv">
+        <div class="card mt-2 projectDiv">
             <table class="table table-striped">
                 <tbody>
                     <tr>
@@ -47,12 +47,12 @@
                 </tbody>
             </table>
         </div>
-        <div class="card mt-2" style="width: 100%; height: 28.5rem">
+        <div class="card mt-2 imageProjectDiv" >
             <img id="projectImage" src="https://storage.googleapis.com/bd-ge-01/buildings-v2/2560x1920/20057.jpg" alt="Project Image" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
     </div>
 
-    <div class="table-responsive-xxl table-bordered text-center" style="font-size: x-small;">
+    <div class="table-responsive-xxl table-bordered text-center mt-2" style="font-size: small;">
         <table class="table align-middle rounded-2 border-muted mb-0 bg-white">
             <td>
                 <a class="btn btn-sm btn-warning" style="font-size: x-small;" href="#">გეოლოგიური კვლევის დამატება</a>
@@ -73,7 +73,7 @@
     </div>
 
     <!-- for Geological -->
-    <div class="table-responsive-xxl text-center mt-2" style="font-size: x-small;">
+    <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-warning">
                 <tr>
@@ -97,7 +97,7 @@
     </div>
 
     <!-- for Geophysical -->
-    <div class="table-responsive-xxl text-center mt-2" style="font-size: x-small;">
+    <div class="table-responsive-xxl text-center mt-1 mb-2" style="font-size: x-small;">
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-success">
                 <tr>
